using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace LinguisticsApp.DomainModel.Enumerations
{
    public enum ResearchField
    {
        HistoricalLinguistics,
        ComparativeLinguistics,
        Phonology,
        Semantics,
        CognitiveScience
    }
}
