using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace LinguisticsApp.DomainModel.Enumerations
{
    public enum SemanticField
    {
        Kinship,
        Nature,
        Technology,
        Religion,
        Everyday
    }
}
